fix occupied bases z-index

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -420,7 +420,6 @@ body {
     padding: 0px;
     position: absolute;
     width: 20px;
-    z-index: 1;
 }
 
 .first-base {
